# crawler

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/rakun-fine/: Cargo.toml
backend/rakun-fine/src/domain/: fine.rs  institution.rs  license_plate.rs  mod.rs  renavam.rs
docs/: README.md  discovery.md  identification.md  models.md  sources.md
examples/: req.rs
frontend/src/: index.ts
frontend/src/components/: HelloDecorator.vue
rakun-application/: Cargo.toml
rakun-application/src/application/port/incoming/: mod.rs  register_car.rs
rakun-application/src/domain/: car.rs  fine.rs  mod.rs
rk-client/: Cargo.toml
rk-client/examples/: client_sync.rs  req.rs
rk-client/src/: client.rs  lib.rs  request.rs
spiders/spiders/: dersp.py  embu.py
src/: lib.rs  main.rs  queue.rs  request.rs  site.rs  spider.rs
src/http/: request.rs
