[package]
authors = ["mbsd <mbsd@m0x.ru>"]
description = "Crawler"
documentation = "https://docs.rs//"
edition = "2018"
homepage = "https://github.com/murilobsd/rakun"
license = "ISC"
name = "rakun"
repository = "https://github.com/murilobsd/rakun.git"
version = "0.1.0"

[dependencies]
http = "0.2.2"
queue = "0.3"
serde = "1.0.117"
